@@ -88,8 +88,10 @@ ToDo/Notes:
 	  checked and set in the ntfs inode as done for compressed files and
 	  the compressed size needs to be used for vfs inode->i_blocks instead
 	  of the allocated size, again, as done for compressed files.
-	- Add AT_EA in addition to AT_DATA to whitelist for being allowed to
-	  be non-resident in fs/ntfs/attrib.c::ntfs_attr_can_be_non_resident().
+	- Add AT_EA in addition to AT_DATA to whitelist for being allowed to be
+	  non-resident in fs/ntfs/attrib.c::ntfs_attr_can_be_non_resident().
+	- Add fs/ntfs/attrib.c::ntfs_attr_vcn_to_lcn_nolock() used by the new
+	  write code.
 
 2.1.22 - Many bug and race fixes and error handling improvements.
 
